$Id$

version 1.8.2 Shibo (2006-03-31):

 - fixed value of avg upload in stats on Node Info (alec)
 - using RFC2822 date format in mail headers (alec)
 - using native PHP's wordwrap function instead of old textwrap() for
   mail body formatting in Mailing (alec)
 - fixed summaries on customer's liabilities list (alec)

version 1.8.1 Shyla (2006-02-25):

  - fixed cash receipts problem with default numberplan (alec)
  - lmsd/hostfile: fixed few network replacement variables (alec)
  - fixed rights checking while deleting helpdesk's tickets (alec)
  - fixed 'finances management' access rule (alec)
  - lmsd/hostfile fixed 'networks' and 'customergroups' options parsing (alec)
  - fixed timetable events searching by user (alec)

version 1.8.0 Rosha (2006-01-27):

  - fixed dynamic popups resizing in Firefox (alec)
  - fixed invoices list filtering by value (alec)
  - added variable 'user' on invoice for expositor name (alec)
  - fixed transfer forms printing for selected customer (alec)
  - contrib/customer_otherip: removed doubtful sample lms.ini (alec)

version 1.8.0rc5 Rosha (2006-01-15):

  - fixed credit notes printing from customer balance box (alec)
  - lms-rtparser: added support for multipart/alternative messages, fixed
    problem with attachements with spaces and unknown/forbidden characters
    in filename (alec)
  - on invoice note value can be set to '0' instead of '0.00' or deleting 
    position (alec)
  - contrib/bin/lms-debtors: fixed (alec)
  - fixed nett values calculations on Liabilities Report (alec)
  - documentation fixes (alec)
  - contrib/customer_otherip: fixed invoices printing - added lost checkconfig.php
    include (alec)

version 1.8.0rc4 Rosha (2006-01-06):

  - fixed new item addition in Cash Receipt Edit (alec)
  - removed doubled function CustomerGroupGetAll() call in print module (alec)
  - fixed link to all customer's documents list (alec)
  - setting moddate and modid when deleting customers (alec)