@@ -128,6 +128,7 @@ void reload(GLOBAL *g, struct payments_module *p)
 	unsigned char *d_period, *w_period, *m_period, *q_period, *y_period, *value, *taxid;
 	unsigned char *description, *invoiceid;
 	int i, today, docid=0, last_customerid=0, number=0, exec=0, suspended=0, itemid=0;
+	int imday, imonth;
 
 	time_t t;
 	struct tm *tt;
@@ -143,21 +144,24 @@ void reload(GLOBAL *g, struct payments_module *p)
 	strftime(month, 	sizeof(month), 		"%m", tt);	
 	strftime(year, 		sizeof(year), 		"%Y", tt);
 
-	switch(atoi(month)) {
+	imday = tt->tm_mday;
+        imonth = tt->tm_mon+1;
+
+	switch(imonth) {
 		case 1:
 		case 4:
 		case 7:
 		case 10:
-			sprintf(quarterday, "%d", atoi(monthday));
+			sprintf(quarterday, "%d", imday);
 			break;
 		case 2:
 		case 5:
 		case 8:
 		case 12:
-			sprintf(quarterday, "%d", atoi(monthday)+100);
+			sprintf(quarterday, "%d", imday+100);
 			break;
 		default:
-			sprintf(quarterday, "%d", atoi(monthday)+200);
+			sprintf(quarterday, "%d", imday+200);
 			break;
 	}
 
@@ -172,17 +176,16 @@ void reload(GLOBAL *g, struct payments_module *p)
 	tt->tm_min = 0;
 	tt->tm_hour = 0;
 	tt->tm_mday = 1;
-
-	tt->tm_mon = atoi(month)-1;
+	tt->tm_mon = imonth-1;
 	tt->tm_year = atoi(year)-1900;
 
 	switch(p->num_period)
 	{
 		case DAILY:
-			tt->tm_mday = atoi(monthday); // current day
+			tt->tm_mday = imday; // current day
 		break;
 		case WEEKLY:
-			tt->tm_mday = atoi(monthday) - atoi(weekday) + 1; // last Monday
+			tt->tm_mday = imday - atoi(weekday) + 1; // last Monday
 		break;
 		case MONTHLY:
 		break;
@@ -225,8 +228,8 @@ void reload(GLOBAL *g, struct payments_module *p)
 	tt->tm_min = 0;
 	tt->tm_hour = 0;
 	tt->tm_wday = atoi(weekday);
-	tt->tm_mday = atoi(monthday);
-	tt->tm_mon = atoi(month)-1;
+	tt->tm_mday = imday;
+	tt->tm_mon = imonth-1;
 	tt->tm_year = atoi(year)-1900;
 	today = (int) mktime(tt);
 
